# certification-tool

./: .gitattributes  .gitignore  .gitmodules  .pullapprove.yml  CODE_OF_CONDUCT.md  NOTICE  README.adoc  README.md  default.env  docker-compose.override-backend-dev.yml  docker-compose.override-frontend-dev.yml  docker-compose.yml  traefik_dynamic.yml
backend/: .coveragerc  .flake8  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .version_information  backend.dockerfile  cspell.json  default_test_environment.config  docker-compose.override.yml  docker-compose.yml  mypy.ini  prestart.sh  pyproject.toml  pytest.ini  tests-start.sh
backend/.devcontainer/: devcontainer.json  docker-compose.yml  initializeCommands.sh
backend/.github/ISSUE_TEMPLATE/: bug-template.yaml  feature-template.yaml
backend/.github/workflows/: python-lint.yml  spell-check.yml  unittests.yml
backend/alembic/: env.py
backend/alembic/versions/: 028ec0c3c704_add_project_config.py  079b491a5069_enable_description_attribute.py  079dfe8e3e03_make_testrunconfig_optional.py  136e7b39e9e8_rename_selected_test_cases.py  31f2da69d8c4_add_errors_to_testcases_and_testsuites.py  4183bcf568f2_remove_user_and_item.py  489ef0771cbe_adding_pics_json_to_project.py  4b5532b0ac1e_remove_unused_project_settings.py  5ad169ab8749_upgrade_to_sqlalchemy2_0.py  621cc7fec168_added_thread_project_config.py  6494682dab86_make_project_mandatory_for_.py  66f5fdf75be8_added_archive_support_project_.py  72989eaa90f6_added_test_run_config.py  8ad40d9f3ac1_added_test_execution_models.py  94d307a738ba_added_log_to_run.py  9996326cbd1d_import_export_feature.py  b173743bd652_added_test_metadata.py  (+4 more)
backend/app/: __init__.py  backend_pre_start.py  default_environment_config.py  log.py  log_utils.py  main.py  pics_applicable_test_cases.py  singleton.py  socket_connection_manager.py  utils.py  version.py
backend/docs/: Changing-the-backend-data-model.adoc  Developing-in-VSCode.md  Updating-CHIP-Tool-SDK.adoc
backend/gunicorn/: start-reload.sh  start.sh
backend/scripts/: fetch_sdk_yaml_tests_and_runner.sh  format-imports.sh  format.sh  install-pi-deps.sh  lint.sh  pull-chip-tool-image.sh  reset_db.py  test-docker.sh  test-local.sh
backend/sdk_patch/: TestHarnessSDKChanges.patch
backend/test_collections/: .disabled_test_collections
cli/: .flake8  .gitignore  .isort.cfg  Dockerfile  README.md  cli.sh  config.json.example  mypy.ini  openapi.json  pyproject.toml
cli/.devcontainer/: devcontainer.json
cli/app/: async_cmd.py  client.py  config.py  main.py  utils.py
cli/scripts/: format.sh  generate_client.sh  lint.sh
(+682 files in other folders)
