[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.15.0"
fastapi = "^0.95.1"
python-multipart = "^0.0.5"
email-validator = "^1.0.5"
requests = "^2.23.0"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^6.1.0"
pydantic = "^1.10.11"
emails = "^0.6.0"
raven = "^6.10.0"
gunicorn = "^20.0.4"
jinja2 = "^3.1.2"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
sqlalchemy = "^2.0"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
faker = "^4.14.0"
loguru = "^0.5.3"
docker = "^6.1.2"
notifiers = "^1.2.1"
notifier = "^1.0.3"
types-requests = "^2.26"
bitstring = "^3.1.7"
SQLAlchemy-Utils = "^0.41.1"
types-filelock = "^3.2.5"
PyYAML = "^6.0"
black = "^23.7.0"
isort = "^5.12.0"
autoflake = "^2.1.1"
flake8 = "^6.0.0"
types-pyyaml = "^6.0.12.9"
pydantic-yaml = "^0.11.2"
websockets = "^11.0.3"

[tool.poetry.dev-dependencies]
mypy = "~1.3.0"
pytest-cov = "^4.0.0"
pytest = "^7.3.1"
pytest-xdist = "^2.5.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.23.0"
asgi-lifespan = "^1.0.1"
filelock = "^3.7.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

# Ignore SDK repo in python intelisense in VSCode
[tool.pyright]
exclude = ["third_party"]